--- a/css/lqd-messages.css
+++ b/css/lqd-messages.css
@@ -137,7 +137,7 @@ a.home-btn {
     width: 100%;
     display: inline-block;
     margin-right: 20px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
 .entry-content ul.lqdm-resources-list ul.single-item li.lqdm-resources-list-item {
@@ -192,9 +192,9 @@ h1.lqdm-message-title {
 }
 
 #mav-entry li.lqdm-item.lqdm-thumb {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    margin-bottom: 0px;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
 }
 
 .page.mav-body {
@@ -202,7 +202,7 @@ h1.lqdm-message-title {
 }
 
 #mav-entry {
-    padding: 0px;
+    padding: 0;
     font-size: 1.5em;
 }
 
@@ -262,8 +262,8 @@ h1.lqdm-message-title {
 #mav-single div.row.lqdm-single-sermon-title {
     padding-bottom: 1px;
     margin-bottom: 1px;
-    padding-top:0px;
-    margin-top:0px;
+    padding-top:0;
+    margin-top:0;
 }
 
 #mav-single #message-resource div.col-sm-3 {
@@ -281,20 +281,20 @@ h1.lqdm-message-title {
 }
 
 #mav-single #message-summary {
-    padding-bottom:0px;
-    margin-bottom:0px;
+    padding-bottom:0;
+    margin-bottom:0;
 }
 
 #mav-single #message-others h1 {
-    margin-top:0px;
+    margin-top:0;
 }
 
 #mav-single li.lc-head {
-    margin-bottom:0px;
+    margin-bottom:0;
 }
 
 #mav-single li.lqdm-list {
-    margin-bottom:0px;
+    margin-bottom:0;
 }
 
 #mav-single .lqdm-resources-list-item {
@@ -302,8 +302,8 @@ h1.lqdm-message-title {
 }
 
 #mav-single .lqdm-item.lqdm-thumb {
-    padding:0px;
-    margin-bottom:0px;
+    padding:0;
+    margin-bottom:0;
 }
 
 .entry-content.lqdm-series-desc.mav-series > p {
