--- a/css/selectric.css
+++ b/css/selectric.css
@@ -196,7 +196,7 @@
 /* 2/6/2016 */
 .social-area.clearfix {
   margin-right: -20px;
-  margin-top: 0px !important;
+  margin-top: 0 !important;
 }
 
 /* 3/6/2016 */
