--- a/css/style.css
+++ b/css/style.css
@@ -49,20 +49,16 @@ img {
     clear: both;
 }
 
-.clearfix:before {
-    display: table;
-    content: "";
-    clear: both;
-}
-
 .clear {
     clear: both;
 }
 
+/** Alignment */
 .aligncenter {
     text-align: center !important;
 }
 
+/** WP Image Captions */
 .wp-caption {
     text-align: initial;
 }
@@ -75,11 +71,13 @@ img {
     text-align: initial;
 }
 
+/** Sprites */
 .sprite {
     display: inline-block;
     vertical-align: middle;
 }
 
+/** Headers */
 h1, h2, h3, h4, h5, h6 {
     font-family: "Avenir Next LT Pro Demi", sans-serif;
     color: #14a7e0;
@@ -88,10 +86,8 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1.2rem 0 1.5rem;
 }
 
-/* Blue Button
-   Use span inside of blue button class to make content larger.
-   */
-.blue_btn {
+/* Blue Button - Use a span inside of blue button class to make content larger. */
+.blue_btn, .orange_btn {
     color: #0074c8;
     font-size: 16px;
     line-height: 16px;
@@ -114,7 +110,7 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
 }
 
-.blue_btn > span {
+.blue_btn > span, .orange_btn > span {
     display: block;
     font-size: 40px;
     line-height: 40px;
@@ -122,7 +118,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Avenir Next LT Pro Demi", sans-serif;
 }
 
-.blue_btn:hover, .blue_btn:focus {
+.blue_btn:hover, .blue_btn:focus, .orange_btn:hover, .orange_btn:focus {
     color: #14a7e0;
     border-color: #f08a41;
     text-decoration: none;
@@ -136,40 +132,15 @@ h1, h2, h3, h4, h5, h6 {
 /* Orange Button */
 .orange_btn {
     color: #f08a41;
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: bold;
-    font-variant: normal;
-    text-align: center;
-    text-transform: uppercase;
-    -webkit-box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
-    -moz-box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
-    box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
-    padding: 10px 20px;
-    margin: 10px 0 0 0;
-    border: 4px solid #f08a41;
-    -webkit-border-radius: 42px;
-    -moz-border-radius: 42px;
-    border-radius: 42px;
-    display: inline-block;
-    top: auto;
-    background: #fff;
-    position: relative;
 }
 
 .orange_btn > span {
-    display: block;
-    font-size: 40px;
-    line-height: 40px;
     color: rgb(0, 86, 139);
-    font-family: "Avenir Next LT Pro Demi", sans-serif;
 }
 
 .orange_btn:hover, .orange_btn:focus {
     color: rgb(0, 86, 139);
     border-color: rgb(0, 86, 139);
-    text-decoration: none;
-    outline: none;
 }
 
 .orange_btn:hover span, .orange_btn:focus span {
@@ -233,14 +204,17 @@ textarea {
 }
 
 /* Overall Page Structure */
+/* Ensures the page has no margins */
 .pagetop {
     margin: 0;
 }
 
+/* Puts a margin at the top and bottom of the header, before the menu. */
 .header_top {
     padding: 36px 0 25px;
 }
 
+/* Provides shadow around page border, sets maximum width, centers. */
 .page {
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
     margin: auto;
@@ -249,7 +223,7 @@ textarea {
 
 .logo {
     float: left;
-    margin-left: -22px;
+    margin-left: -31px !important;
 }
 
 .selected {
@@ -580,14 +554,11 @@ textarea {
     margin-right: 0;
 }
 
-.logo {
-    margin-left: -31px !important;
-}
-
 .sectionleftul .menu_list li {
     min-width: 205px;
 }
 
+/** Screen Size: 1024px - 1200px */
 @media only screen and (min-width: 1024px) and (max-width: 1200px) {
     .nav > li > a {
         padding-left: 28px;
@@ -599,6 +570,7 @@ textarea {
     }
 }
 
+/** Screen Size: 768px - 1023px */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
     .selected {
         margin: 8px 0 0 50px;
@@ -611,12 +583,14 @@ textarea {
     }
 }
 
+/** Screen Size: 768px - 814px */
 @media only screen and (min-width: 768px) and (max-width: 814px) {
     .menublock li a {
         font-size: 1.34rem;
     }
 }
 
+/** Screen Size: 768px - 991px */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 
     .sectionleftul .menu_list li {
@@ -624,6 +598,7 @@ textarea {
     }
 }
 
+/** Screen Size: 992px - 1023px */
 @media only screen and (min-width: 992px) and (max-width: 1023px) {
     .sectionleftul .menu_list li {
         min-width: 151px;
@@ -634,6 +609,7 @@ textarea {
     }
 }
 
+/** Screen Size: <=1024px */
 @media (max-width: 1024px) {
     .social-area.clearfix {
         margin-right: 0 !important;
@@ -661,6 +637,7 @@ textarea {
     }
 }
 
+/** Screen Size: >=768px */
 @media (min-width: 768px) {
     .navbar-collapse {
         padding-left: 0;
@@ -668,7 +645,7 @@ textarea {
     }
 
     .navbar-form.navbar-right {
-        margin-right: 40px;
+        margin-right: 4.5%;
         padding-left: 11px;
         padding-right: 11px;
     }
@@ -682,6 +659,7 @@ textarea {
     }
 }
 
+/** Screen Size: <=767px */
 @media (max-width: 767px) {
     .social-area.clearfix {
         margin-top: 23px !important;
@@ -902,6 +880,7 @@ textarea {
 
 }
 
+/** Screen Size: <=479px */
 @media (max-width: 479px) {
 
     .sectionleft li a {
@@ -926,6 +905,7 @@ textarea {
     }
 }
 
+/** Screen Size: <=319px */
 @media (max-width: 319px) {
     .social-icon li a.hyoutube, .social-icon li .hinsta {
         display: none !important;
@@ -959,7 +939,6 @@ textarea {
 }
 
 /* Responsive Videos, when not using FitVid. */
-
 .videoWrapper {
     position: relative;
     padding-bottom: 56.25%;
@@ -1185,5 +1164,4 @@ a.church-online-link {
   text-overflow: ellipsis;
   text-transform:uppercase;
   white-space: nowrap; /* Keeps Online from moving to a new line. */
-
 }
