--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/** Resets */
 * {
     margin: 0;
     padding: 0;
@@ -86,67 +87,6 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1.2rem 0 1.5rem;
 }
 
-/* Blue Button - Use a span inside of blue button class to make content larger. */
-.blue_btn, .orange_btn {
-    color: #0074c8;
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: bold;
-    font-variant: normal;
-    text-align: center;
-    text-transform: uppercase;
-    -webkit-box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
-    -moz-box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
-    box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
-    padding: 10px 20px;
-    margin: 10px 0 0 0;
-    border: 4px solid rgb(0, 86, 139);
-    -webkit-border-radius: 42px;
-    -moz-border-radius: 42px;
-    border-radius: 42px;
-    display: inline-block;
-    top: auto;
-    background: #fff;
-    position: relative;
-}
-
-.blue_btn > span, .orange_btn > span {
-    display: block;
-    font-size: 40px;
-    line-height: 40px;
-    color: #f08a41;
-    font-family: "Avenir Next LT Pro Demi", sans-serif;
-}
-
-.blue_btn:hover, .blue_btn:focus, .orange_btn:hover, .orange_btn:focus {
-    color: #14a7e0;
-    border-color: #f08a41;
-    text-decoration: none;
-    outline: none;
-}
-
-.blue_btn:hover span, .blue_btn:focus span {
-    color: rgb(0, 86, 139);
-}
-
-/* Orange Button */
-.orange_btn {
-    color: #f08a41;
-}
-
-.orange_btn > span {
-    color: rgb(0, 86, 139);
-}
-
-.orange_btn:hover, .orange_btn:focus {
-    color: rgb(0, 86, 139);
-    border-color: rgb(0, 86, 139);
-}
-
-.orange_btn:hover span, .orange_btn:focus span {
-    color: #f08a41;
-}
-
 /* Headers */
 h1 {
     font-size: 50px;
@@ -223,7 +163,6 @@ textarea {
 
 .logo {
     float: left;
-    margin-left: -31px !important;
 }
 
 .selected {
@@ -244,14 +183,11 @@ textarea {
     width: 100%;
 }
 
-.social-area {
-    float: right;
-}
-
 /* Menu */
+/* Stretch nav menu full length of container; ensure it has blue background. */
 .menublock {
     margin: 0;
-    background-color: #14a7e0
+    background-color: #14a7e0;
 }
 
 .menublock .navbar-default {
@@ -298,14 +234,8 @@ textarea {
     border-right: 1px solid #fff;
 }
 
-.social-area.clearfix {
-    margin-right: -32px !important;
-    margin-top: -2px;
-}
-
 /* Forms */
 .form-group .form-controlinput {
-    /* background: #dcddde; // Made form inputs gray, disabled. */
     border: medium none;
     border-radius: 20px;
     box-sizing: border-box;
@@ -318,6 +248,7 @@ textarea {
     margin-top: 5px;
 }
 
+/** Search Icon for Menu */
 .form-group_new {
     position: relative;
     margin-top: -2px;
@@ -332,11 +263,13 @@ textarea {
 }
 
 /* Footer */
+/* Top of Footer */
 .footer_section {
     background: #14a7e0;
     padding: 18px 0;
 }
 
+/* Footer Boxes */
 .sectionleftul {
     float: left;
     margin-left: -22px;
@@ -357,6 +290,7 @@ textarea {
     font-weight: normal;
 }
 
+/* Social Icons in Top of Footer */
 .footer_social {
     float: right;
     margin: 0 -32px;
@@ -407,10 +341,12 @@ textarea {
     padding: 15px 0;
 }
 
-.futr_menublock { /* Remove? */
+/* Allows for adding additional menus to footer */
+.futr_menublock {
     margin: 0 -32px 0 -30px;
 }
 
+/* Inner Blocks in Footer */
 .inner_block {
     margin: 0;
 }
@@ -474,13 +410,10 @@ textarea {
     padding-left: 0;
 }
 
-.entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4 { /* TODO: Combine? */
-    padding: 0 30px;
-    display: inline-block;
-}
-
+/* Set No Padding, Inline Block properties for H1 through H4 when in .entry-content */
 .entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4 {
     padding: 0 0;
+    display: inline-block;
 }
 
 .entry-content .search-form {
@@ -531,6 +464,7 @@ textarea {
     margin-top: 15px;
 }
 
+/* Styling of Predefined Menu Does Not Already Exist for Footer */
 .footer_menu_widget_else a {
     color: #14a7e0;
     text-decoration: none;
@@ -558,7 +492,9 @@ textarea {
     min-width: 205px;
 }
 
+/** Media Queries */
 /** Screen Size: 1024px - 1200px */
+/** Affects: nav links, footer menu */
 @media only screen and (min-width: 1024px) and (max-width: 1200px) {
     .nav > li > a {
         padding-left: 28px;
@@ -571,6 +507,7 @@ textarea {
 }
 
 /** Screen Size: 768px - 1023px */
+/** Affects .selected and nav links */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
     .selected {
         margin: 8px 0 0 50px;
@@ -584,6 +521,7 @@ textarea {
 }
 
 /** Screen Size: 768px - 814px */
+/** Affects main nav links */
 @media only screen and (min-width: 768px) and (max-width: 814px) {
     .menublock li a {
         font-size: 1.34rem;
@@ -591,14 +529,15 @@ textarea {
 }
 
 /** Screen Size: 768px - 991px */
+/** Affects footer list items */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-
     .sectionleftul .menu_list li {
         width: auto;
     }
 }
 
 /** Screen Size: 992px - 1023px */
+/** Affects footer menu. */
 @media only screen and (min-width: 992px) and (max-width: 1023px) {
     .sectionleftul .menu_list li {
         min-width: 151px;
@@ -610,12 +549,8 @@ textarea {
 }
 
 /** Screen Size: <=1024px */
+/** Affects logo, social */
 @media (max-width: 1024px) {
-    .social-area.clearfix {
-        margin-right: 0 !important;
-
-    }
-
     .logo {
         margin-left: auto;
     }
@@ -632,12 +567,13 @@ textarea {
         margin-left: auto;
     }
 
-    .futr_menublock { /* TODO: Remove? */
+    .futr_menublock {
         margin: 0;
     }
 }
 
 /** Screen Size: >=768px */
+/** Affects .navbar- classes, h1, .entry-content p */
 @media (min-width: 768px) {
     .navbar-collapse {
         padding-left: 0;
@@ -660,11 +596,10 @@ textarea {
 }
 
 /** Screen Size: <=767px */
+/** Affects footer list items, header, logo, selected, menublock,
+ form-group, navbar-
+ */
 @media (max-width: 767px) {
-    .social-area.clearfix {
-        margin-top: 23px !important;
-    }
-
     .sectionleftul .menu_list ul li {
         padding-bottom: 24px;
     }
@@ -692,10 +627,6 @@ textarea {
 
     .selected .custom-select {
         width: 80%;
-    }
-
-    .social-icon {
-        display: inline-block;
     }
 
     .menublock ul li {
@@ -730,23 +661,6 @@ textarea {
         font-size: 1.2em
     }
 
-    .social-area { /* TODO: Remove? */
-        color: #fff;
-        float: none;
-        margin-top: 17px;
-        position: absolute;
-        text-align: center;
-    }
-
-  /* Removed 1/27/20:
-    .posit {
-
-        margin-bottom: -42px;
-        position: relative;
-        z-index: 1;
-    }
-    */
-
     .menublock {
         margin: 10px 0 0;
     }
@@ -759,11 +673,6 @@ textarea {
     .footer_container {
         background-color: #dcddde;
         padding: 0 27px 0 18px;
-    }
-
-    .social-area.clearfix {
-        margin-top: 40px;
-        right: 10px;
     }
 
     .sectionleftul {
@@ -879,10 +788,9 @@ textarea {
     }
 
 }
-
 /** Screen Size: <=479px */
+/** Affects footer menu */
 @media (max-width: 479px) {
-
     .sectionleft li a {
         padding-right: 15px;
         margin-bottom: 15px;
@@ -904,13 +812,9 @@ textarea {
         margin-top: 5px;
     }
 }
-
 /** Screen Size: <=319px */
+/** Affects: H1 - H4, .entry-content p */
 @media (max-width: 319px) {
-    .social-icon li a.hyoutube, .social-icon li .hinsta {
-        display: none !important;
-    }
-
     h1 {
         font-size: 24px;
     }
