--- a/css/style-old.css
+++ b/css/style-old.css
@@ -268,6 +268,51 @@ textarea {
     width: 100%;
 }
 
+.social-area {
+    float: right;
+}
+
+.social-icon {
+    float: left;
+    list-style-type: none;
+    padding: 0;
+}
+
+.social-icon li {
+    float: left;
+    margin: 8px 3px 0;
+}
+
+.social-icon li a {
+    display: inline-block;
+    height: 26px;
+    width: 26px;
+}
+
+.social-icon li a.hyoutube {
+    background: #fff url("../image/LRG_Icon_YouTube01.png") no-repeat scroll center center / 100% auto;
+    border: 1px solid #fff;
+    border-radius: 50px;
+}
+
+.social-icon li .hfb {
+    background: #fff url("../image/LRG_Icon_Facebook.png") no-repeat scroll center center / 100% auto;
+    border: 1px solid #fff;
+    border-radius: 50px;
+}
+
+.social-icon li .htwitter {
+    background: #fff url("../image/LRG_Icon_twitter.png") no-repeat scroll center center / 100% auto;
+    border: 1px solid #fff;
+    border-radius: 50px;
+}
+
+.social-icon li .hinsta {
+    background: #fff url("../image/LRG_Icon_Instagram.png") no-repeat scroll center center / 100% auto;
+    border: 1px solid #fff;
+    border-radius: 50px;
+}
+
 .menublock {
     margin: 0;
     background-color: #14a7e0
@@ -315,6 +360,11 @@ textarea {
 
 .menublock ul li:last-child {
     border-right: 1px solid #fff;
+}
+
+.social-area.clearfix {
+    margin-right: -32px !important;
+    margin-top: -2px;
 }
 
 .form-group .form-controlinput {
@@ -619,6 +669,11 @@ textarea {
 }
 
 @media (max-width: 1024px) {
+    .social-area.clearfix {
+        margin-right: 0px !important;
+
+    }
+
     .logo {
         margin-left: auto;
     }
@@ -662,6 +717,10 @@ textarea {
 }
 
 @media (max-width: 767px) {
+    .social-area.clearfix {
+        margin-top: 23px !important;
+    }
+
     .sectionleftul .menu_list ul li {
         padding-bottom: 24px;
     }
@@ -689,6 +748,10 @@ textarea {
 
     .selected .custom-select {
         width: 80%;
+    }
+
+    .social-icon {
+        display: inline-block;
     }
 
     .menublock ul li {
@@ -723,6 +786,14 @@ textarea {
         font-size: 1.2em
     }
 
+    .social-area {
+        color: #fff;
+        float: none;
+        margin-top: 17px;
+        position: absolute;
+        text-align: center;
+    }
+
     .posit {
         margin-bottom: -42px;
         position: relative;
@@ -741,6 +812,11 @@ textarea {
     .footer_container {
         background-color: #dcddde;
         padding: 0px 27px 0 18px;
+    }
+
+    .social-area.clearfix {
+        margin-top: 40px;
+        right: 10px;
     }
 
     .sectionleftul {
@@ -873,6 +949,10 @@ textarea {
 }
 
 @media (max-width: 319px) {
+    .social-icon li a.hyoutube, .social-icon li .hinsta {
+        display: none !important;
+    }
+
     h1 {
         font-size: 24px;
     }
