- Organizing style.css - Removing old, no longer used CSS styles: .pagetop, .header_top, .logo, - .menublock styles have been reduced significantly, refactored to lqd-header-menu. - Refactoring .form-controlinput to .lqd-search-input. - Combined .form-group .paddings into .form-group .lqd-search-input. - Renaming form-group_new to lqd-header-search. - Replacing .sectionleftul with .lqd-top-footer. - Replacing footer_social with .lqd-footer-social. - Combined .futr_menublock into .lqd-footer-menus. - .inner_block refactoring to .lqd-footer-menus - Increasing specificity for some more generic rules to ensure changes don't affect other areas, e.g. .menu_list ul li becomes .lqd-top-footer .menu_list ul li - Add new class of .lqd-entry-content so that the entry content aligns with the rest of the Bootstrap content. - Dropped min-width on new media query from 1170 to 1000 px. - Remove unused genericons dependency. - Adding container and lqd-entry-content to content-page.php - Footer sees almost complete rewrite.

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*
-	blue_btn  	=	for blue Button
-	orange_btn 	=	for orange Button
-					span inside blue btn class the content will be bigger
-*/
-
 * {
     margin: 0;
     padding: 0;
@@ -85,6 +79,7 @@ img {
     vertical-align: middle;
 }
 
+/** Headers **/
 h1, h2, h3, h4, h5, h6 {
     font-family: "Avenir Next LT Pro Demi", sans-serif;
     color: #14a7e0;
@@ -93,6 +88,24 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1.2rem 0 1.5rem;
 }
 
+h1 {
+    font-size: 50px;
+}
+
+h2 {
+    font-size: 40px;
+}
+
+h3 {
+    font-size: 30px;
+}
+
+/** Buttons **/
+/*
+	blue_btn  	=	for blue Button
+	orange_btn 	=	for orange Button
+					span inside blue btn class the content will be bigger
+*/
 .blue_btn {
     color: #0074c8;
     font-size: 16px;
@@ -177,18 +190,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #f08a41;
 }
 
-h1 {
-    font-size: 50px;
-}
-
-h2 {
-    font-size: 40px;
-}
-
-h3 {
-    font-size: 30px;
-}
-
+/** Forms **/
 input[type="text"], select, textarea {
     display: block;
     width: 100%;
@@ -230,29 +232,15 @@ input[type="text"]::-webkit-input-placeholder {
 textarea {
     height: 140px;
 }
-
-.pagetop {
-    margin: 0;
-}
-
-.header_top {
-    padding: 36px 0 25px;
-}
-
 .page {
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
     margin: auto;
     max-width: 1280px;
 }
 
-.logo {
-    float: left;
-    margin-left: -22px;
-}
-
 .selected {
     float: left;
-    margin: 0px;
+    margin: 0;
     width: 27%;
 }
 
@@ -268,22 +256,57 @@ textarea {
     width: 100%;
 }
 
-.menublock {
+/** Page Header **/
+.header-top-row {
+    padding: 36px 0 25px;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
     margin: 0;
-    background-color: #14a7e0
+    max-width: 1280px;
 }
 
-.menublock .navbar-default {
+/* Location Dropdown */
+.location-block {
+    /*float: left; */
+    /*margin-left: 177px; */
+    /*width: 32%; */
+}
+
+.location-block .selectric .label {
+    font-family: 'Avenir Next LT Pro', sans-serif !important;
+}
+
+.header-church-online-btn-style {
+    font-size: 1.25rem;
+    line-height: 16px;
+    height: 28px;
+    margin-top: 6px;
+    padding-top: 4px;
+    color: #14a7e0;
+    overflow: hidden;
+    white-space: nowrap;
+    border: 2px solid #337ab7;
+    display:block;
+    font-weight: bold;
+    text-transform: uppercase;
+    -webkit-box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
+    -moz-box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
+    box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
+    border-radius: 42px;
+}
+
+/* These rules were largely .menublock */
+.lqd-header-menu {
     background-color: #14a7e0;
-    border: none;
+    border:none;
+    margin-bottom: 0;
 }
 
-.menublock .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
+.lqd-header-menu .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
     background: none;
     color: initial;
 }
 
-.menublock ul li {
+.lqd-header-menu ul li {
     border-left: 1px solid #ffffff;
     box-sizing: border-box;
     color: #ffffff;
@@ -292,8 +315,8 @@ textarea {
     text-align: center;
 }
 
-.menublock li a {
-    color: #ffffff !important;
+.lqd-header-menu li a {
+    color: #ffffff !important; /* This will be gray per Bootstrap if !important is removed. */
     display: block;
     font-size: 1.5rem;
     font-family: 'Avenir Next Cyr W00 Bold', sans-serif;
@@ -301,37 +324,36 @@ textarea {
     text-transform: uppercase;
 }
 
-.menublock li.current-menu-item a, .menublock li a:hover {
-    background-color: #14a7e0 !important;
+.lqd-header-menu li.current-menu-item a, .lqd-header-menu li a:hover {
+    /*background-color: #14a7e0 !important; */
 }
 
-.menublock nav {
-    margin: 0px;
+.lqd-header-menu nav {
+    margin: 0;
 }
 
-.menublock ul li:first-child {
+/* First and Last Menu Items on Header Menu */
+.lqd-header-menu ul li:first-child {
     border: medium none;
 }
 
-.menublock ul li:last-child {
+.lqd-header-menu ul li:last-child {
     border-right: 1px solid #fff;
 }
 
-.form-group .form-controlinput {
-    background: #dcddde;
+/* Header Menu Search */
+.form-group .lqd-search-input { /* Was .form-controlinput */
+    /*background: #dcddde;*/
     border: medium none;
     border-radius: 20px;
     box-sizing: border-box;
     padding: 6px 5px;
     text-indent: 6px;
     height: 28px;
+    margin-top:5px; /* Was .form-group .paddings */
 }
 
-.form-group .paddings {
-    margin-top: 5px;
-}
-
-.form-group_new {
+.lqd-header-search { /* Was form-group_new */
     position: relative;
     margin-top: -2px;
 }
@@ -344,99 +366,93 @@ textarea {
     cursor: pointer;
 }
 
-.footer_section {
+/** Footer **/
+/* Top (Blue) Portion of Footer */
+.lqd-top-footer { /* Was footer_section */
     background: #14a7e0;
     padding: 18px 0;
+    margin-left: -70px;
+    margin-right: -70px;
 }
 
-.sectionleftul {
-    float: left;
-    margin-left: -22px;
+/* Ensures social media icons don't stack on each other. */
+.lqd-top-footer ul li {
+    display:inline;
 }
 
-.sectionleftul li {
-    float: left;
-    padding-right: 35px;
-}
-
-.sectionleftul li a {
+/* Top Footer Links Should Be White */
+.lqd-top-footer .menu_list li a {
     color: white;
-    display: inline-block;
-    font-family: "Avenir Next LT Pro Demi", sans-serif;
     font-size: 20px;
     line-height: 28px;
-    padding-top: 2px;
-    font-weight: normal;
 }
 
-.footer_social {
-    float: right;
-    margin: 0 -32px;
-    padding: 0;
+/* Separates the Contact Us, etc. links in top footer. */
+.lqd-footer-top-left .menu_list ul li {
+    padding-right:80px;
 }
 
-.footer_social:after {
-    clear: both;
-    display: block;
-    content: '';
+.lqd-footer-social {
+    float:right;
 }
 
-.footer_social li {
-    float: left;
+/* Spaces out the social icons in top footer. */
+.lqd-footer-social li { /* Was .footer-social li */
     margin-right: 10px;
 }
 
-.footer_social li i.ffb {
+.lqd-footer-social li i.ffb {
     background: rgba(0, 0, 0, 0) url("../image/LRGwhite_Icon_Facebook.png") no-repeat scroll center center / 100% auto;
     height: 30px;
     width: 30px;
     display: inline-block;
 }
 
-.footer_social li i.ftwitter {
+.lqd-footer-social li i.ftwitter {
     background: rgba(0, 0, 0, 0) url("../image/LRGwhite_Icon_twitter.png") no-repeat scroll center center / 100% auto;
     height: 30px;
     width: 30px;
     display: inline-block;
 }
 
-.footer_social li i.finsta {
+.lqd-footer-social li i.finsta {
     background: rgba(0, 0, 0, 0) url("../image/LRGwhite_Icon_Instagram.png") no-repeat scroll center center / 100% auto;
     height: 30px;
     width: 30px;
     display: inline-block;
 }
 
-.footer_social li i.fyoutube {
+.lqd-footer-social li i.fyoutube {
     background: rgba(0, 0, 0, 0) url("../image/LRGwhite_Icon_YouTube01.png") no-repeat scroll center center / 100% auto;
     height: 30px;
     width: 30px;
     display: inline-block;
 }
 
-.footer_container {
+.lqd-footer-menus { /* was .footer_container */
     background-color: #dcddde;
-    padding: 15px 0;
+    padding-top: 6px;
+    margin: 0 -70px 0 -70px;
 }
 
-.futr_menublock {
-    margin: 0 -32px 0 -30px;
-}
-
-.inner_block {
-    margin: 0;
-}
-
-.inner_block h2 {
+.lqd-footer-menus h2 { /* was inner_block h2 */
     border-bottom: 1px solid #fff;
     color: #14a7e0;
-    font-family: "Avenir Next LT Pro Demi", sans-serif;
-    font-weight: bold;
     font-size: 18px;
-    margin-bottom: 20px;
-    margin-top: 20px;
     padding-bottom: 12px;
     text-transform: uppercase;
+    margin-top: 20px;
+}
+
+/* Navigation Menus */
+/* Ensures that top left footer Contact Us, etc. doesn't stack. */
+.lqd-top-footer .menu_list ul li {
+    display:inline !important;
+}
+
+/* Also ensures top left footer Contact Us, etc. doesn't stack. */
+.lqd-top-footer .menu_list ul li a {
+    display:inline;
 }
 
 .menu_list {
@@ -447,6 +463,7 @@ textarea {
     margin: 0;
 }
 
+/* Spacing for Menu Items in Footer */
 .menu_list ul li {
     display: block;
     padding: 0 0 24px;
@@ -460,10 +477,7 @@ textarea {
     line-height: 16px;
 }
 
-.menu_list li a:hover, .sectionleft li a:hover {
-    text-decoration: none;
-}
-
+/** Entry Content **/
 .entry-content {
     padding: 15px;
     font-size: 24px;
@@ -481,7 +495,7 @@ textarea {
 }
 
 .entry-content .body-text p {
-    padding-left: 0px;
+    padding-left: 0;
 }
 
 .entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4 {
@@ -531,6 +545,11 @@ textarea {
     display: block;
 }
 
+.lqd-entry-content {
+    margin-left: -70px;
+    margin-right: -70px;
+}
+
 .site-title {
     font-size: 2.5rem;
     font-weight: bold;
@@ -541,6 +560,7 @@ textarea {
     margin-top: 15px;
 }
 
+/* If no menu has been selected for footer widgets */
 .footer_menu_widget_else a {
     color: #14a7e0;
     text-decoration: none;
@@ -562,10 +582,6 @@ textarea {
 
 .footer_social li:last-child {
     margin-right: 0;
-}
-
-.logo {
-    margin-left: -31px !important;
 }
 
 .sectionleftul .menu_list li {
@@ -596,7 +612,7 @@ textarea {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 814px) {
-    .menublock li a {
+    .lqd-header-menu li a {
         font-size: 1.34rem;
     }
 }
@@ -618,9 +634,6 @@ textarea {
 }
 
 @media (max-width: 1024px) {
-    .logo {
-        margin-left: auto;
-    }
 
     .footer_social {
         margin: 0 auto;
@@ -632,10 +645,6 @@ textarea {
 
     .sectionleftul {
         margin-left: auto;
-    }
-
-    .futr_menublock {
-        margin: 0px;
     }
 }
 
@@ -676,11 +685,11 @@ textarea {
     .logo {
         text-align: center;
         float: none;
-        margin-left: 0px;
+        margin-left: 0;
     }
 
     .selected {
-        margin: 0px;
+        margin: 0;
         width: 92%;
         text-align: center;
         float: none;
@@ -700,7 +709,7 @@ textarea {
         box-shadow: none;
     }
 
-    .form-group .form-controlinput {
+    .form-group .lqd-search-input {
         width: 100%;
     }
 
@@ -882,11 +891,8 @@ textarea {
     }
 }
 
-.menublock li.current-menu-item a, .menublock li a:hover {
-    background-color: #14a7e0 !important;
-}
-
-.body-text /* For Text Body Content */
+/* For Text Body Content */
+.body-text
 {
     max-width: 800px !important;
     margin: auto !important;
@@ -926,7 +932,7 @@ textarea {
     height: 100%;
 }
 
-/* Campus Pages */
+/** Campus Pages **/
 /* Times */
 .service-times {
     background-color: #e6e8e5;
@@ -1025,17 +1031,6 @@ textarea {
     float: left;
 }
 
-/* Location Dropdown */
-.location-block {
-    /*float: left; */
-    /*margin-left: 177px; */
-    /*width: 32%; */
-}
-
-.location-block .selectric .label {
-    font-family: 'Avenir Next LT Pro', sans-serif !important;
-}
-
 /* Pastor Bios Styling */
 .pastors-bios h2 {
     margin-bottom: 0;
@@ -1044,17 +1039,24 @@ textarea {
 .pastors-bios h3 {
     margin-bottom: 0;
 }
+
+/* Search and Filter */
 .searchandfilter ul li
 {
     float:left;
 }
+
+/* Job Description */
 .job_description ul
 {
     padding-left:40px;
 }
+
+/* List Items without Bullets */
 .lqd-no-bullets li {
     list-style: none;
 }
+
 /* Group Guide styling */
 .group-guides h1.entry-title {
     font-size: 28px;
@@ -1076,34 +1078,11 @@ textarea {
     font-size: 18px;
 }
 .group-guides ul li {
-    font-size: 18px;}
-.group-guides ol li {
-    font-size: 18px;}
-
-.header-church-online-btn-style {
-    font-size: 1.25rem;
-    line-height: 16px;
-    height: 28px;
-    margin-top: 6px;
-    padding-top: 4px;
-    color: #14a7e0;
-    overflow: hidden;
-    white-space: nowrap;
-    border: 2px solid #337ab7;
-    display:block;
-    font-weight: bold;
-    text-transform: uppercase;
-    -webkit-box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
-    -moz-box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
-    box-shadow: 0 0 0 0 rgba(247, 245, 245, 0);
-    border-radius: 42px;
+    font-size: 18px;
 }
 
-.header-top-row {
-    padding: 36px 0 25px;
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
-    margin: 0;
-    max-width: 1280px;
+.group-guides ol li {
+    font-size: 18px;
 }
 
 /**
@@ -1111,17 +1090,17 @@ textarea {
  * To make it work we need to increase the max size of the container (to 1280px) and also make the row wider
  * at larger screen resolutions.
  */
-@media (min-width: 1170px) {
-    .container {
+@media (min-width: 1000px) {
+    .container.lqd-header, .container.lqd-footer, .container.lqd-entry-content {
         min-width:1280px;
         max-width:1280px;
     }
-    .lqd-header .row {
+    .lqd-header .row, .row.lqd-footer-row {
         margin-left: -15px;
         margin-right: -15px;
     }
 
-    .lqd-header-menu {
+    .lqd-header-menu, .row.lqd-footer-row {
         margin-left: -15px;
         margin-right: -15px;
     }
