--- a/css/style-grid.css
+++ b/css/style-grid.css
@@ -317,7 +317,7 @@ textarea {
     border-right: 1px solid #fff;
 }
 
-.form-group .form-controlinput {
+.form-group .lqd-search-input {
     background: #dcddde;
     border: medium none;
     border-radius: 20px;
@@ -701,7 +701,7 @@ textarea {
         box-shadow: none;
     }
 
-    .form-group .form-controlinput {
+    .form-group .lqd-search-input {
         width: 100%;
     }
 
