--- a/css/style-old.css
+++ b/css/style-old.css
@@ -764,7 +764,7 @@ textarea {
         box-shadow: none;
     }
 
-    .form-group .form-controlinput {
+    .form-group .lqd-search-input {
         width: 100%;
     }
 
