--- a/css/lqd-messages.css
+++ b/css/lqd-messages.css
@@ -138,7 +138,7 @@ a.home-btn {
     width: 100%;
     display: inline-block;
     margin-right: 20px;
-    margin-bottom: 0;
+    margin-bottom: 0px;
 }
 
 .entry-content ul.gc-sermon-resources-list ul.single-item li.gc-sermon-resources-list-item {
@@ -263,8 +263,8 @@ h1.gc-sermon-title {
 #mav-single div.row.single-sermon-title {
     padding-bottom: 1px;
     margin-bottom: 1px;
-    padding-top:0;
-    margin-top:0;
+    padding-top:0px;
+    margin-top:0px;
 }
 
 #mav-single #message-resource div.col-sm-3 {
@@ -282,20 +282,20 @@ h1.gc-sermon-title {
 }
 
 #mav-single #message-summary {
-    padding-bottom:0;
-    margin-bottom:0;
+    padding-bottom:0px;
+    margin-bottom:0px;
 }
 
 #mav-single #message-others h1 {
-    margin-top:0;
+    margin-top:0px;
 }
 
 #mav-single li.lc-head {
-    margin-bottom:0;
+    margin-bottom:0px;
 }
 
-#mav-single li.lqdm-list {
-    margin-bottom:0;
+#mav-single li.lc-list {
+    margin-bottom:0px;
 }
 
 #mav-single .gc-sermon-resources-list-item {
